Realigned containers for meta block for mobile and issue #6

--- a/_sass/core/post.scss
+++ b/_sass/core/post.scss
@@ -8,6 +8,10 @@
     align-items: center;
     color: $color-post-meta;
 
+    @media screen and (max-width: $media-breakpoint-sm-max) {
+        align-items: top;
+    }
+
     .tags {
         list-style-type: none;
         margin: 0;
@@ -33,6 +37,7 @@
 
         @media screen and (max-width: $media-breakpoint-sm-max) {
             display: block;
+            text-align: right;
         }
     }
 
@@ -40,10 +45,6 @@
         margin-right: 10px;
         min-width: 150px;
         vertical-align: middle;
-
-        @media screen and (max-width: $media-breakpoint-sm-max) {
-            vertical-align: top;
-        }
     }
 
     .vertical-bar {
